scaleway/htoh/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: htoh
  labels:
    secret.htoh.io/required: "true"
