scaleway/htoh/ingress-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-api
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "8m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.scw.htoh.app
        - api.prd.htoh.app
        - api.htoh.app
      secretName: tls-secret-api
  rules:
    - host: api.scw.htoh.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: htoh-api
                port:
                  name: http
    - host: api.prd.htoh.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: htoh-api
                port:
                  name: http
    - host: api.htoh.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: htoh-api
                port:
                  name: http
